--- a/Tutorial 1 data files(1)/ct_contact_txt.html
+++ b/Tutorial 1 data files(1)/ct_contact_txt.html
@@ -36,8 +36,8 @@
       Charlotte NC 28201
      </address>
 
-     <p>Call: (704) 555-1151</p>
-     <p>Email: curbside.thai@example.com</p>
+     <p>Call: <a href="tel: +17045551151"> (704) 555-1151 </a></p>
+     <p>Email: <a href="malito:curbside.thai@example.com"> curbside.thai@example.com </a></p>
     
   </article>
   <footer>
