--- a/Tutorial 1 data files(1)/ct_menu_txt.html
+++ b/Tutorial 1 data files(1)/ct_menu_txt.html
@@ -25,7 +25,36 @@
   </header>
   <article>
      <h1>Mobile Menu</h1>
-    
+
+      <dl>
+
+         <dt>Brasil Beef Sesame Salad</dt>
+         <dd>Spicy Angus beef and sweet basil on top of fresh spring mix, red cabbage, carrot, cucumber, and tomatoes;
+          served with sesame vinaigrette ($9.95)
+         </dd>
+
+         <dt>Curbside Rice</dt>
+         <dd>Stir-fired rice with onions, red bell peppers, peas and carrots, garnished with red cabbage, cucumbers, scallions, and
+         fried galic ($6.56); add chicken ($8.56) or shrimp ($9.56)
+         </dd>
+
+         <dt>Garlic Pepper Pork</dt>
+         <dd>Marinated pork stir-fried with fresh garlic and pepper; served with steamed Jasmine rice, red cabbage, carrot, 
+         cucumbers, scallions, and fried garlic ($8.58)
+         </dd>
+
+         <dt>Pad Thai</dt>
+         <dd>Stir-fired rice noodles with bean sprouts and chives, garnished with red cabbage, carrot, scallions, lime, and
+         crushed peanuts ($7.50); add chicken ($8.50) or shrimp ($7.59);
+         </dd>
+
+         <dt>Thai Red Curry</dt>
+         <p>Traditional red curry sauce cooked in coconut milk with bamboo shoots, fresh basil, lime, and Thai chili and served 
+         on a bed of steam Jasmine rice ($7.50); add chicken ($8.50) or shrimp ($9.50) 
+         </p>
+      
+      </dl>
+
   </article>
   <footer>
       Curbside Thai &#8226; 411 Belde Drive, Charlotte NC &nbsp; 28201 &#8226; 704-555-1151
