--- a/Tutorial 1 data files(1)-20240205T025614Z-001/Tutorial 1 data files(1)/ct_about.html
+++ b/Tutorial 1 data files(1)-20240205T025614Z-001/Tutorial 1 data files(1)/ct_about.html
@@ -13,6 +13,17 @@
 
 		<header>
 			<img src="ct_logo2.png" alt="Curbside Thai"/>
+
+			<nav>
+				<ul>
+					<li> <a href="ct_about.html"> About </a></li>
+					<li> <a href="ct_locations_txt.html"> Locations </a> </li>
+					<li> <a href="ct_menu_txt.html"> Menu </a> </li>
+					<li> <a href="ct_reviews_txt.html"> Reviews </a> </li>
+					<li> <a href="ct_catering_txt.html"> Catering </a> </li>
+					<li> <a href="ct_contact_txt.html"> Contact </a> </li>
+				</ul>
+			</nav>
 		</header>
 
 		<article>
