--- a/thai/pages/ct_locations.html
+++ b/thai/pages/ct_locations.html
@@ -15,20 +15,20 @@
 
    <meta charset="utf-8" />
    <title>Locations of the Curbside Thai Truck</title>
-   <link href="ct_base.css" rel="stylesheet" />
-   <link href="ct_layout2.css" rel="stylesheet" />
+   <link href="../css/ct_base.css" rel="stylesheet" />
+   <link href="../css/ct_layout2.css" rel="stylesheet" />
 </head>
 
 <body>
   <header class="logo">
-     <img src="ct_logo2.png" alt="Curbside Thai" />
+     <img src="../imgs/ct_logo2.png" alt="Curbside Thai" />
   </header>
   <article>
      <h1>Today's Locations</h1>
 
-      <img src="ct_map.png" alt="" />
+      <img src="../imgs/ct_map.png" alt="" />
       
-      <dl id="ct_locations">
+      <dl id="pages/ct_locations">
       
          <dt> 11 a.m. to 2 p.m. </dt>
          <dd> 285 West 3rd Street, Charlotte </dd>
