--- a/thai/pages/ct_reviews.html
+++ b/thai/pages/ct_reviews.html
@@ -15,13 +15,13 @@
 
    <meta charset="utf-8" />
    <title>Curbside Thai Reviews</title>
-   <link href="ct_base.css" rel="stylesheet" />
-   <link href="ct_layout2.css" rel="stylesheet" />
+   <link href="../css/ct_base.css" rel="stylesheet" />
+   <link href="../css/ct_layout2.css" rel="stylesheet" />
 </head>
 
 <body>
   <header class="logo">
-     <img src="ct_logo2.png" alt="Curbside Thai" />
+     <img src="../imgs/ct_logo2.png" alt="Curbside Thai" />
   </header>
   <article>
      <h1>Reviews</h1>
