--- a/thai/pages/ct_about.html
+++ b/thai/pages/ct_about.html
@@ -5,30 +5,30 @@
 		<meta charset="utf-8">
 		<meta name="keywords" content="Thai, restaurant, Charlotte, food" />
 		<title>About Curbside Thai</title>
-		<link href="ct_base.css" rel="stylesheet" />
-		<link href="ct_layout2.css" rel="stylesheet" />
+		<link href="../css/ct_base.css" rel="stylesheet" />
+		<link href="../css/ct_layout2.css" rel="stylesheet" />
 	</head>
 
 	<body>
 
 		<header>
-			<img src="ct_logo2.png" alt="Curbside Thai"/>
+			<img src="../imgs/ct_logo2.png" alt="Curbside Thai"/>
 
 			<nav>
 				<ul>
 					<li> <a href="ct_about.html"> About </a></li>
-					<li> <a href="ct_locations_txt.html"> Locations </a> </li>
-					<li> <a href="ct_menu_txt.html"> Menu </a> </li>
-					<li> <a href="ct_reviews_txt.html"> Reviews </a> </li>
-					<li> <a href="ct_catering_txt.html"> Catering </a> </li>
-					<li> <a href="ct_contact_txt.html"> Contact </a> </li>
+					<li> <a href="ct_locations.html"> Locations </a> </li>
+					<li> <a href="ct_menu.html"> Menu </a> </li>
+					<li> <a href="ct_reviews.html"> Reviews </a> </li>
+					<li> <a href="ct_catering.html"> Catering </a> </li>
+					<li> <a href="ct_contact.html"> Contact </a> </li>
 				</ul>
 			</nav>
 		</header>
 
 		<article>
 			<h1>About Us</h1>
-			<img src="ct_photo1.png" alt=""/>
+			<img src="../imgs/ct_photo1.png" alt=""/>
 			<p> <strong>Curbside Thai</strong> brings the rich flavor of Thailand to North Carolina.
 			Master Chef Sajja Adulet, <br> with over 35 years of experience at the House of Asia, now offers
 			that same fine dining to the streets of <br> Charlotte with our modern mobile food truck.
