--- a/thai/pages/ct_catering.html
+++ b/thai/pages/ct_catering.html
@@ -15,18 +15,18 @@
 
    <meta charset="utf-8" />
    <title>Catering by Curbside Thai</title>
-   <link href="ct_base.css" rel="stylesheet" />
-   <link href="ct_layout2.css" rel="stylesheet" />
+   <link href="../css/ct_base.css" rel="stylesheet" />
+   <link href="../css/ct_layout2.css" rel="stylesheet" />
 </head>
 
 <body>
   <header class="logo">
-     <img src="ct_logo2.png" alt="Curbside Thai" />
+     <img src="../imgs/ct_logo2.png" alt="Curbside Thai" />
   </header>
   <article>
      <h1>Catering</h1>
 
-     <img src="ct_photo2.png" alt="" />
+     <img src="../imgs/ct_photo2.png" alt="" />
 
       <p> Since 2019 Curbside Thai has provided top-class catering for weddings <br> and special events. We cover Charlotte and large regions
        of North <br> Carolina with our mobile food truck, built specifially for catering big <br> events. 
